manifests/default/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  revisionHistoryLimit: 1
  replicas: 0
  selector:
    matchLabels:
      app: paperless-ngx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: paperless-ngx
    spec:
      containers:
      - name: paperless-ngx
        image: ghcr.io/paperless-ngx/paperless-ngx:3.3
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: storage
          mountPath: /usr/src/paperless/media
          subPath: paperless-ngx/media
        - name: storage
          mountPath: /usr/src/paperless/data
          subPath: paperless-ngx/data
        resources:
          limits:
            cpu: "2"
            memory: 2048Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 150m
            memory: 256Mi
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: default-storage  
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:8-alpine
        ports:
        - containerPort: 6379
