manifests/default/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  labels:
    app: paperless-ngx
spec:
  selector:
    app: paperless-ngx
  ports:
  - protocol: TCP
    port: 8000 
    targetPort: 8000
